[gd_scene load_steps=4 format=3 uid="uid://dp3xi1syur18b"]

[ext_resource type="Theme" uid="uid://r7pa3bx4t8xj" path="res://main_theme.tres" id="1_q84a3"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_t46uk"]
[ext_resource type="FontFile" uid="uid://dyhsg2j4272wr" path="res://ethnocentric rg.otf" id="3_vopte"]

[node name="SettingsMenu" type="Popup"]
position = Vector2i(500, 101)
size = Vector2i(600, 600)
script = ExtResource("1_t46uk")

[node name="Background" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="SettinTabs" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="SettinTabs"]
layout_mode = 2
theme = ExtResource("1_q84a3")
theme_override_fonts/font = ExtResource("3_vopte")

[node name="MarginContainer" type="MarginContainer" parent="SettinTabs/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettinTabs/Video/MarginContainer"]
layout_mode = 2
columns = 2

[node name="DisplayMode" type="Label" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display Mode"

[node name="DisplayOptionButton" type="OptionButton" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="VsyncLabel" type="Label" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Vsync (Recomended on)"

[node name="VsyncBtn" type="CheckButton" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
button_pressed = true

[node name="MaxFPSLabel" type="Label" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max FPS"

[node name="HBoxContainer" type="HBoxContainer" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFPSVal" type="Label" parent="SettinTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
layout_mode = 2
text = "Max"

[node name="MaxFPSSlider" type="HSlider" parent="SettinTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 60.0

[node name="DisplayFPSLabel" type="Label" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="DisplayFPSbtn" type="CheckButton" parent="SettinTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="Audio" type="TabBar" parent="SettinTabs"]
visible = false
layout_mode = 2
theme = ExtResource("1_q84a3")
theme_override_fonts/font = ExtResource("3_vopte")

[node name="MarginContainer" type="MarginContainer" parent="SettinTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettinTabs/Audio/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolumeLabel" type="Label" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SFXVolumeLabel" type="Label" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="SettinTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Gameplay" type="TabBar" parent="SettinTabs"]
visible = false
layout_mode = 2
theme = ExtResource("1_q84a3")
theme_override_fonts/font = ExtResource("3_vopte")

[node name="MarginContainer" type="MarginContainer" parent="SettinTabs/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GameSettings" type="GridContainer" parent="SettinTabs/Gameplay/MarginContainer"]
layout_mode = 2
columns = 2

[node name="null" type="Label" parent="SettinTabs/Gameplay/MarginContainer/GameSettings"]
layout_mode = 2
text = "Nothing yet :)"

[connection signal="item_selected" from="SettinTabs/Video/MarginContainer/VideoSettings/DisplayOptionButton" to="." method="_on_display_option_button_item_selected"]
[connection signal="toggled" from="SettinTabs/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_vsync_btn_toggled"]
[connection signal="value_changed" from="SettinTabs/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFPSSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="toggled" from="SettinTabs/Video/MarginContainer/VideoSettings/DisplayFPSbtn" to="." method="_on_display_fp_sbtn_toggled"]
[connection signal="value_changed" from="SettinTabs/Audio/MarginContainer/AudioSettings/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="SettinTabs/Audio/MarginContainer/AudioSettings/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="SettinTabs/Audio/MarginContainer/AudioSettings/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
